fix claimed SEFI and claim sefi button in dark mode for lottery

--- a/src/pages/SecretLottery/lottery.scss
+++ b/src/pages/SecretLottery/lottery.scss
@@ -1017,6 +1017,10 @@ $shadow-dark: none;
         box-shadow: 0px 10px 32px -4px #18274B1A;
         box-shadow: 0px 6px 14px -6px #18274B1F;
     }
+
+    i{
+        color: var(--secret-swap-neutral-01);
+    }
     
 
     .modal-tickets-header{
@@ -1174,8 +1178,29 @@ $shadow-dark: none;
                 }
 
                 .row-earning-sefi{
+
+                    p{
+                        font-size: 14px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 24px;
+                        letter-spacing: 0em;
+                        color: var(--secret-swap-green-01);
+                    }
+                    
+                    span{
+                        color: var(--secret-swap-neutral-01);
+                    }
+
                     button{
+                        background-color: var(--secret-swap-neutral-01);
                         height: 46px;
+                        font-weight: 600;
+                        font-size: 16px;
+                        line-height: 24px;
+                        text-align: center;
+                        border:none;
+                        color: var(--secret-background);
                     }
                 }
             }
